resources/style.css
#loginError {
    /* give it the smithforrestr treatment */
    color: red;
}

ImageSelectPage QLabel {
    /* Indent to align with QRadioButton text */
    margin-left: 17px;

    /* Add extra space to visually separate the options */
    margin-bottom: 12px;
}

#bolded {
    font-weight: bold;
}

#whatsNext {
    padding-left: 10px;
}

#googleSigninButton {
  border: none;
  qproperty-icon: url(" ");
  qproperty-iconSize: 191px 46px;
  background-image: url(":/images/btn_google_signin_light_normal_web.png");
  background-repeat: no-repeat;
}

#googleSigninButton:hover {
  border: none;
  qproperty-icon: url(" ");
  qproperty-iconSize: 191px 46px;
  background-image: url(":/images/btn_google_signin_light_focus_web.png");
  background-repeat: no-repeat;
}

* {
  font-size: 17px;
}

